making progress with portfolio page

--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,16 @@ table {
 	height:auto;
 	background-color: #FBFBFB;
 }
+
+.hero2 {
+	background: url('../img/blank-bg.jpg') right bottom no-repeat;
+	background-size: contain;
+	padding:110px 0 100px 0;
+	height:auto;
+	background-color: #FBFBFB;
+}
+
+
 .hero h1 {
 	font-size: 120px;
 	letter-spacing: -8px;
